--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -1,72 +1,74 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Simple CRM - Customer Management made Simple</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css"/>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet"
-          crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
-    <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<title>Simple CRM - Customer Management made Simple</title>
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.css}" />
+<link rel="stylesheet"
+	th:href="@{/webjars/datatables/css/dataTables.bootstrap4.min.css}" />
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Simple CRM</a>
-        </div>
-    </div>
-</nav>
-<div class="container" style="margin-top:80px">
+	<nav class="navbar navbar-dark bg-dark fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="/">Simple CRM</a>
+			</div>
+		</div>
+	</nav>
+	<div class="container" style="margin-top: 80px">
 
-    <h1 class="pb-2 border-bottom row">
-        <span class="col-sm-6 pb-4">Customer List</span>
-        <span class="col-sm-6 text-sm-right pb-4">
-            <a href="/customer/create" class="btn btn-primary btn-outline-primary d-block d-sm-inline-block">Create Customer</a>
-        </span>
-    </h1>
+		<h1 class="pb-2 border-bottom row">
+			<span class="col-sm-6 pb-4">Customer List</span> <span
+				class="col-sm-6 text-sm-right pb-4"> <a
+				href="/customer/create" class="btn btn-sm btn-outline-primary">Create
+					Customer</a>
+			</span>
+		</h1>
 
 
-    <div class="alert alert-info" th:if="${message}">
-        <h3 th:text="${message}"></h3>
-    </div>
+		<div class="alert alert-info" th:if="${message}">
+			<h3 th:text="${message}"></h3>
+		</div>
 
-    <div class="mt-5">
-        <table id="customerTable" class="table table-striped table-bordered" style="width:100%">
-            <thead>
-            <tr>
-                <th>Id</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>City</th>
-                <th>Country</th>
-                <th>Phone</th>
-            </tr>
-            </thead>
-        </table>
-    </div>
+		<table id="customerTable" class="table table-sm table-striped"
+			style="width: 100%">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>First Name</th>
+					<th>Last Name</th>
+					<th>Email</th>
+					<th>City</th>
+					<th>Country</th>
+					<th>Phone</th>
+				</tr>
+			</thead>
+		</table>
 
-</div>
-<br/><br/>
-<footer class="footer navbar-dark bg-dark fixed-bottom">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
-                <p class="text-center text-muted">&copy;
-                    <span th:text="${#dates.format(#dates.createNow(), 'yyyy')}"></span>
-                    <a href="https://github.com/ajkr195?tab=repositories">Spring Boot Rocks.</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</footer>
-
-<script>
+	</div>
+	<br />
+	<br />
+	<footer class="footer navbar-dark bg-dark fixed-bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<p class="text-center text-muted">
+						&copy; <span
+							th:text="${#dates.format(#dates.createNow(), 'yyyy')}"></span> <a
+							href="https://github.com/ajkr195?tab=repositories">Spring
+							Boot Rocks.</a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+	<script
+		th:src="@{/webjars/datatables/1.10.21/js/jquery.dataTables.min.js}"></script>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<script type="text/javascript"
+		th:src="@{/webjars/datatables/1.10.21/js/dataTables.bootstrap4.min.js}"></script>
+	<script>
   var url = '/customer/data_for_datatable';
 
   $(document).ready(function () {
