--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Simple CRM</title>
+<title>Simple CRM</title>
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.css}" />
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Simple CRM</a>
-        </div>
-    </div>
-</nav>
-<div class="container" style="margin-top:80px">
-    <div>
-        <h1>Welcome to simple CRM</h1>
-        <h2>Customer Management made Simple</h2>
-    </div>
-    <p class="mt-5"><a href="/customer" class="btn btn-primary btn-block">Manage Cricketers/Customers</a></p>
-</div>
-<br/><br/>
-<footer class="footer navbar-dark bg-dark fixed-bottom">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4">
-                <p class="text-center text-muted">&copy;
-                    <span th:text="${#dates.format(#dates.createNow(), 'yyyy')}"></span>
-                    <a href="https://github.com/ajkr195?tab=repositories">Tucanoo Solutions Ltd.</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<nav class="navbar navbar-dark bg-dark fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="/">Simple CRM</a>
+			</div>
+		</div>
+	</nav>
+	<div class="container" style="margin-top: 80px">
+		<div>
+			<h1>Welcome to simple CRM</h1>
+			<h2>Customer Management made Simple</h2>
+		</div>
+		<p class="mt-5">
+			<a href="/customer" class="btn btn-primary btn-block">Manage
+				Cricketers/Customers</a>
+		</p>
+	</div>
+	<br />
+	<br />
+	<footer class="footer navbar-dark bg-dark fixed-bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<p class="text-center text-muted">
+						&copy; <span
+							th:text="${#dates.format(#dates.createNow(), 'yyyy')}"></span> <a
+							href="https://github.com/ajkr195?tab=repositories">Spring
+							Boot Rocks.</a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
